# DecaJoins

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
bot/: __init__.py  config.py  consts.py
bot/plugins/: add_rule.py  dig.py  doh.py  doq.py  scanner.py  start.py
bot/utils/: __init__.py  argparser.py  fullname.py  http.py  logging.py  messages.py  randomstr.py  timing.py  validators.py  watchlog.py
test/: conftest.py  dig.py  doh.py  doq.py  dot.py  parseargs.py  test_bot_dig.py  test_bot_doh.py  test_bot_doq.py  test_config.py  test_logging.py  test_timing_utils.py  test_urlscans.py  test_validators_utils.py
testing/: utils.py
